fixed overflow

--- a/app/index.css
+++ b/app/index.css
@@ -195,6 +195,7 @@ body {
   display: flex;
   flex-direction: column;
   min-width: 12rem;
+  z-index: 100;
 }
 
 .profile-dropdown a,
